<resources>
    <string name="app_name">ZyhGame</string>
    <string name="timeCount">时间 : 0</string>
    <string name="restart">重新开始</string>
    <string name="pt">拼图</string>
    <string name="pt_1">拼图1</string>
    <string name="pt_2">拼图2</string>
    <string name="pt_3">拼图3</string>
    <string name="pt_4">拼图4</string>
    <string name="pt_5">拼图5</string>
    <string name="pt_6">拼图6</string>
    <string name="pt_7">拼图7</string>
    <string name="pt_8">拼图8</string>
    <string name="pt_9">拼图9</string>
    <string name="game_select">游戏选择</string>
    <string name="confirm">确定</string>
    <string name="request">请求</string>
    <string name="account">账户</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="quit">退出</string>
    <string name="forceOffline">强制下线</string>
    <string name="rememberPwd">记住密码</string>
    <string name="title_activity_normal">NormalActivity</string>
</resources>