<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".PtGameActivity">

        <LinearLayout
            android:id="@+id/pt_line0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pt_tv_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/timeCount"
                android:textColor="#FF0000"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pt_line1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/pt_line2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pt_line0">

            <ImageButton
                android:id="@+id/pt_ib_00x00"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/pt_1"
                android:onClick="onClick"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:src="@drawable/img_pic1_00_00"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/pt_ib_00x01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/pt_2"
                android:onClick="onClick"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:src="@drawable/img_pic1_00_01"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/pt_ib_00x02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/pt_3"
                android:onClick="onClick"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:src="@drawable/img_pic1_00_02"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/pt_line2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/pt_line3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pt_line1">

            <ImageButton
                android:id="@+id/pt_ib_01x00"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/pt_4"
                android:onClick="onClick"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:src="@drawable/img_pic1_01_00"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/pt_ib_01x01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/pt_5"
                android:onClick="onClick"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:src="@drawable/img_pic1_01_01"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/pt_ib_01x02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/pt_6"
                android:onClick="onClick"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:src="@drawable/img_pic1_01_02"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/pt_line3"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/pt_line4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pt_line2">

            <ImageButton
                android:id="@+id/pt_ib_02x00"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/pt_7"
                android:onClick="onClick"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:src="@drawable/img_pic1_02_00"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/pt_ib_02x01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/pt_8"
                android:onClick="onClick"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:src="@drawable/img_pic1_02_01"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/pt_ib_02x02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/pt_9"
                android:onClick="onClick"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:src="@drawable/img_pic1_02_02"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/pt_line4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pt_line3">

            <Button
                android:id="@+id/pt_btn_restart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp"
                android:onClick="restart"
                android:text="@string/restart" />
            <Button
                android:id="@+id/pt_btn_quit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:onClick="quit"
                android:text="@string/quit" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/pt_line5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pt_line4">

            <ImageView
                android:id="@+id/pt_iv"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:contentDescription="@string/pt"
                android:src="@drawable/pic1"
                android:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>