<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <com.zyh.ZyhG1.components.TitleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/game_select_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/game_select"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/game_selector"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/Games" />

        <Button
            android:id="@+id/main_ok_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onOKClick"
            android:text="@string/confirm" />

        <EditText
            android:id="@+id/main_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入测试Get地址"
            android:text="https://www.baidu.com"
            android:textSize="20sp" />

        <Button
            android:id="@+id/main_login_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onRequestClick"
            android:text="@string/request" />

        <Button
            android:id="@+id/main_quit_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onQuitClick"
            android:text="@string/quit" />

        <Button
            android:id="@+id/main_force_offline_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forceOffline" />

        <ProgressBar
            android:id="@+id/main_process"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/main_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:maxLines="10"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/black"
            android:text="Welcome to my game"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>